--- a/package.json
+++ b/package.json
@@ -9,13 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.23",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.10"
+    "@apollo/client": "^3.11.4",
+    "@clerk/clerk-expo": "^2.2.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "apollo-link-error": "^1.1.13",
+    "date-fns": "^3.6.0",
+    "expo": "^51.0.31",
+    "expo-auth-session": "~5.5.2",
+    "expo-linking": "~6.3.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
+    "moment": "^2.30.1",
+    "react": "18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "0.75.2",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.18.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "4.10.9",
+    "react-native-screens": "~3.34.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
