--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
     "expo": "^51.0.31",
     "expo-auth-session": "~5.5.2",
     "expo-linking": "~6.3.1",
+    "expo-random": "~14.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
-    "graphql": "^16.9.0",
-    "graphql-request": "^7.1.0",
+    "graphql": "^15.8.0",
+    "graphql-request": "^6.1.0",
     "moment": "^2.30.1",
-    "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.75.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-calendar-picker": "^8.0.5",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.10.9",
-    "react-native-screens": "~3.34.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
